--- a/views/dosen/revisi.ejs
+++ b/views/dosen/revisi.ejs
@@ -74,7 +74,7 @@
 </div>
 <script>
   function success() {
-    Swal.fire("Good job!", "Rps berhasil diedit", "success")
+    Swal.fire("Good job!", "Rps berhasil direvisi", "success")
       .then(function () {
         // document.getElementById('form').submit();
         window.setTimeout(function () {
