--- a/views/dosen/courses.ejs
+++ b/views/dosen/courses.ejs
@@ -7,7 +7,7 @@
           <h1 class="navbar-brand head mb-3">Rencana Pembelajaran Semester (RPS)</h1>
           <div>
             <a href="/dosen/add-course" class="button100-form-btn btn-head">Tambah RPS</a>
-            <a href="" target="_blank" class="button100-form-btn btn-head">Revisi RPS</a>
+            <!-- <a href="" target="_blank" class="button100-form-btn btn-head">Revisi RPS</a> -->
           </div>
         </span>
       </div>
@@ -19,7 +19,7 @@
             <div class="card text-center h-100">
               <div class="card-body" onclick="page()">
                 <img src="/images/frame.png" class="card-img-top" alt="..." />
-                <h4 class="card-title flexible"><%= item.code %> - <%= item.name %></h4>
+                <h4 class="card-title flexible"><%= item.name %></h4>
                 <h6 class="card-subtitle text-muted mt-2">Semester <%= item.semester %></h6>
               </div>
             </div>  
