--- a/views/dosen/cpmk.ejs
+++ b/views/dosen/cpmk.ejs
@@ -29,7 +29,7 @@
                 <td width="250px">
                   <a class="editb" href="/dosen/<%= item.course_plan_id %>/edit-cpmk/<%= item.id %>"><i class="bx bxs-edit" style="color: #624de3"></i></a>
                   <form action="/dosen/<%= item.course_plan_id %>/CPMK/<%= item.id %>?_method=DELETE" onsubmit="hapus()" class="d-inline" method="post">
-                    <button type="submit" class="editb"><i class="bx bx-trash" style="color: #a30d11"></i></button>
+                    <button onclick="hapus()" type="submit" class="editb"><i class="bx bx-trash" style="color: #a30d11"></i></button>
                   </form>
                 </td>
               </tr>
@@ -51,26 +51,28 @@
       })
       .catch((error) => console.log(error));
   }
-  function hapus() {
-    Swal.fire({
-      title: "Yakin hapus data?",
-      text: "Data tidak bisa dikembalikan setelah dihapus",
-      icon: "warning",
-      showCancelButton: true,
-      confirmButtonColor: "#3085d6",
-      cancelButtonColor: "#d33",
-      confirmButtonText: "Ya, hapus!",
-    }).then((result) => {
-      if (result.isConfirmed) {
-        Swal.fire("Good job!", "Data dihapus", "berhasil")
+
+   function hapus(){
+        Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          Swal.fire("Good job!", "Data deleted", "success")
           .then(function () {
             window.setTimeout(function () {
               window.location = "./CPMK";
             }, 700);
           })
           .catch((error) => console.log(error));
-      }
-    });
-  }
+        }
+      })
+    }
+  
 </script>
 <%- include('../partials/footer'); -%>
