--- a/views/mahasiswa/cetakRps.ejs
+++ b/views/mahasiswa/cetakRps.ejs
@@ -1,21 +1,25 @@
-<%- include('sidebar'); -%>
+<!DOCTYPE html>
+<!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    
+    <!-- Boxiocns CDN Link -->
+    <link rel="stylesheet" type="text/css" href="/public/css/table.css">
+    <link rel="stylesheet" href="/css/style-mahasiswa.css">
+    <link href="/vendor/sweetalert2.all.min.css"></link>
+    <script src="/vendor/sweetalert2.all.min.js"></script>
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+<body>
 
-<div id="container">
-  <div class="content">
-    <% item.forEach((item) => { %>
-    <div class="content-wrapper">
-      <div class="col-12">
-        <span class="d-flex justify-content-between">
-          <h1 class="navbar-brand head mb-3 ms-2"><%= item.name %></h1>
-        </span>
-      </div>
-    </div>
-    <% }) %>
 
-    <div class="tampil-rps">
-      <% item.forEach((item) => { %>
-      <a class="btn btn-secondary btn-lg" role="button" onclick="window.open('/mahasiswa/<%= item.course_id %>/<%= item.rev %>/cetakRps')"><i class=' bx-fw bx-sm bx bx-printer'></i></a>
-      <% }) %>
+    <div class="main">
+       
       <table class="rps-tabel">
         <thead>
           <tr>
@@ -203,7 +207,11 @@
         </tbody>
       </table>
     </div>
+    <script>
+      window.print();
+    </script>
   </div>
-</div>
+
+  
 
 <%- include('../partials/footer'); -%>
