--- a/public/css/style-mahasiswa.css
+++ b/public/css/style-mahasiswa.css
@@ -860,11 +860,11 @@ button:hover {
   background-color: #f0f0f0;
   width: 100%;
   height: 70px;
-  padding: 0 20px;
+  padding: 10px 20px;
   line-height: 70px;
 }
 .head {
-  line-height: 70px;
+  line-height: 50px;
 }
 div .btn-head {
   display: inline-flex;
@@ -879,6 +879,7 @@ div .back {
   text-align: center;
   border-radius: 3px;
   margin-left: 0;
+  margin-bottom: 10px;
 }
 .btn-head:hover {
   color: #fff;
