--- a/public/css/style-admin.css
+++ b/public/css/style-admin.css
@@ -7,6 +7,24 @@
   font-family: "Poppins", sans-serif;
 }
 
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.mingguan-tabel {
+  border-collapse: collapse;
+  font-size: 13px;
+  width: 100%;
+  border-style: solid;
+  margin-top: 80px;
+  
+}
 .sidebar {
   position: fixed;
   top: 0;
@@ -40,14 +58,12 @@
   margin-left: 7px;
 }
 
-<<<<<<< HEAD
+
 .welcome {
   margin-top: 7px;
   color: #ffaa7b;
 }
 
-=======
->>>>>>> 97d4035ebba8f583353908307564722ab000428d
 .navbar-brand {
   margin-left: 20px;
   display: inline-block;
@@ -323,6 +339,143 @@ img {
   bottom: 0;
   width: 100%;
 }
+.tampil-rps {
+  font-family: "lucida Sans Unicode", "Lucida Grande", "Segoe UI", vardana;
+  margin-top: 30px;
+}
+.rps-tabel {
+  border-collapse: collapse;
+  font-size: 13px;
+  width: 100%;
+  border-style: solid;
+}
+table {
+}
+.rps-tabel thead {
+  border: #000;
+  border-width: 1;
+}
+.rps-tabel tr {
+  border-width: 1;
+}
+tr {
+  border-width: 1;
+}
+.rps-tabel thead th,
+.rps-tabel td {
+  padding: 7px 17px;
+}
+.rps-tabel .title {
+  caption-side: bottom;
+  margin-top: 12px;
+}
+.rps-tabel thead th:last-child,
+.rps-tabel tfoot th:last-child,
+.rps-tabel tbody td:last-child {
+  border: 0;
+}
+
+/* Table Header */
+.rps-tabel thead th {
+  text-transform: uppercase;
+  border: 1px solid #818181;
+}
+
+.rps-tabel thead tr:first-child th:nth-child(1) {
+  text-align: center;
+}
+
+/* Table Body */
+.rps-tabel tbody tr,
+.rps-tabel tbody tr td {
+  border-top: 1px solid #818181;
+  border-left: 1px solid #818181;
+  border-right: 1px solid #818181;
+  border-bottom: 1px solid #818181;
+}
+.grey {
+  background-color: #bec0be;
+}
+tr .border-hidden {
+}
+.rps-tabel tbody tr:first-child td {
+  background-color: #bec0be;
+}
+.rps-tabel tbody tr:nth-child(2) td:nth-child(4) {
+  text-align: center;
+}
+.rps-tabel tbody tr:nth-child(2) td:nth-child(5) {
+  text-align: center;
+}
+
+.rps-tabel tbody tr:nth-child(3) td:nth-child(2) {
+  background-color: #bec0be;
+  text-align: center;
+}
+.rps-tabel tbody tr:nth-child(3) td:nth-child(3) {
+  background-color: #bec0be;
+  text-align: center;
+}
+.rps-tabel tbody tr:nth-child(3) td:nth-child(4) {
+  background-color: #bec0be;
+  text-align: center;
+}
+
+.rps-tabel tbody td:nth-child(4),
+.rps-tabel tbody td:first-child,
+.rps-tabel tbody td:last-child {
+  text-align: left;
+}
+.rps-tabel tbody tr td:hover {
+  background-color: #ffffa2;
+  border-color: #ffff0f;
+  transition: all 0.2s;
+}
+
+/* Table Footer */
+.rps-tabel tfoot th {
+  border-right: 1px solid #c7ecc7;
+}
+.rps-tabel tfoot th:first-child {
+  text-align: right;
+}
+
+.flexible {
+  flex-grow: 1;
+}
+.container-button100 {
+  width: 100%;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+input {
+  outline: none;
+  border: none;
+  width: inherit;
+}
+
+.wrap-button100 {
+  width: 400px;
+  min-height: 500px;
+  position: relative;
+  padding: 30px;
+  background: #f5f5f5;
+  box-shadow: 7px 7px 41px rgba(0, 0, 0, 0.45);
+  border-radius: 14px;
+}
+
 @media screen and (max-width: 400px) {
   .sidebar {
     width: 240px;
