--- a/views/admin/coursesPlan.ejs
+++ b/views/admin/coursesPlan.ejs
@@ -13,7 +13,7 @@
                       <div class="col-3"><h6>: Genap</h6></div>
                     </div><br>
                 </div>
-              
+                <a class="btn btn-info mb-2" href="#" role="button" onclick="window.open('/admin/cetakListRps')"><i class="bx-sm bx bx-printer"></i></a>
               
   <table class="table table-striped table-bordered table-hover">
     <thead>
@@ -22,9 +22,8 @@
         <th class="text-center" scope="col">Nama Mata Kuliah</th>
         <th class="text-center" scope="col">Kode Mata Kuliah</th>
         <th class="text-center" scope="col">SKS</th>
-        <th class="text-center" scope="col">Sem</th>
+        <th class="text-center" scope="col">Semester</th>
         <th class="text-center" scope="col">Jumlah Revisi</th>
-        <th class="text-center" scope="col">Lihat</th>
         <th class="text-center" scope="col">Cetak</th>
         <th class="text-center" scope="col">Detail</th>
       </tr>
@@ -39,16 +38,15 @@
         <td class="text-center"><%= item.credit %></td>
         <td class="text-center"><%= item.semester %></td>
         <td class="text-center"><%= item.rev %></td>
-        <td class="text-center"><a href="" class="link-info"><i class='bx bx-sm bx-detail bx-border'></i></a></td>
-        <td class="text-center"><a href="" class="link-primary"><i class='bx bx-sm bx-printer bx-border'></i></a></i></td>
+        <td class="text-center"><a href="/admin/coursesPlan/<%= item.id%>/1" class="link-primary"><i class='bx bx-sm bx-printer bx-border'></i></a></i></td>
         <td class="text-center">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Details
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="/admin/coursesPlan/<%= item.id%>">Kelola Dosen</a>
-              <a class="dropdown-item" href="#">Peta CPMK ke CPL</a>
-              <a class="dropdown-item" href="#">Persentase RPS</a>
+              <a class="dropdown-item" href="/admin/petaCplCpmk/<%= item.id%>">Peta CPMK ke CPL</a>
+              <a class="dropdown-item" href="/admin/persentaseRps">Persentase RPS</a>
             </div>
         </td>
        
