--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,6 +9,8 @@
     </g>
 </svg>
 <div class="message-box">
+   <h1 id="Polygon-3">About</h1>
+   <h1> </h1>
   <h1 id="Polygon-1">Boby Darmawan</h1>
   <p id="Polygon-1">2011522019</p>
   <h1 id="Polygon-2">Muhammad Rayhan Rizaldi</h1>
