--- a/views/mahasiswa/sidebar.ejs
+++ b/views/mahasiswa/sidebar.ejs
@@ -56,7 +56,7 @@
 
             <div class="login">
                 <li class="">
-                <a href="">
+                <a href="/about">
                     <i class='bx bx-info-circle bx-sm'></i>
                     <span class="link_name">Info</span>
                 </a>
