--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -93,12 +93,12 @@
 
             <div class="logout">
                 <li class="">
-                <a href="">
+                <a href="/about">
                     <i class='bx bx-info-circle bx-sm'></i>
                     <span class="link_name">Info</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">Info</a></li>
+                    <li><a class="link_name" href="/about">Info</a></li>
                 </ul>
                 </li>
                 <li>
