--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Portal</title>
 
     <link rel="stylesheet" href="<% if (user.type == "T") { %>
         /css/style-admin.css
