--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,5 +1,8 @@
 body {
-  background-image: linear-gradient(to bottom right, rgb(34, 146, 220), rgb(255, 255, 250));
+  background-image: url("../images/sky.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   }
   svg {
     position: absolute;
@@ -15,7 +18,7 @@ body {
     top: 50%;
     left: 50%;
     margin-top: -225px;
-    margin-left: -100px;
+    margin-left: -150px;
     color: #FFF;
     font-family: Roboto;
     font-weight: 300;
