--- a/views/dosen/cetakRps.ejs
+++ b/views/dosen/cetakRps.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
-<html lang="en" dir="ltr" class="cetak" onload=window.print()>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <title>Home</title>
@@ -13,16 +13,17 @@
        <% } %> ">
     
     <!-- Boxiocns CDN Link -->
-        <link rel="stylesheet" href="/public/css/table.css">
+    <link rel="stylesheet" href="/public/css/table.css">
    
-     <meta name="viewport" content="width=device-width, initial-scale=0.5">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<body onload=window.print()>
+<body>
     <div class="main">
-        <div class="content">
-          <% items.forEach((item) => { %>
-            <div class="table" >
-              
+          <div class="content">
+            <% items.forEach((item) => { %>
+                
+            <div class="tampil-rps">
+                
                 <table class="rps-tabel">
                      <thead>         
                         <tr>
@@ -49,7 +50,7 @@
                             <td>Semester </td>
                             <td align="center">Tgl Penyusunan </td>
                         </tr>
-            
+
                         <tr>
                             <td colspan="2"><%= item.name %></td>
                             <td><%= item.code %></td>
@@ -58,26 +59,26 @@
                             <td >4</td>
                             <td > </td>
                         </tr>
-            
+
                         <tr>
-                            <td rowspan="2", colspan="2">OTORISASI </td>
+                            <td rowspan=2", colspan="2">OTORISASI </td>
                             <td colspan="2">Dosen Pengembang RPS </td>
                             <td colspan="2">Koordinator Rumpun MK </td>
                             <td colspan="2">KA Program Studi </td> 
                         </tr>
                         <tr>
-                            <% var dosens = item.lecturers; %> 
-                            <% item.lecturers.forEach((dosen) => { %>
-                                <td colspan="2"><%= dosen.name %></td> 
-                            <% }) %> 
-                            <!-- <td colspan="2"></td> -->
+                            <td colspan="2">
+                                <% items.forEach((data) => { data.lecturers.forEach((res) => { %>
+                                <%= res.name %>
+                                <% })}) %>
+                            </td>
                             <td colspan="2"> </td>
                             <td colspan="2"> </td> 
                         </tr>
-            
+
                         <tr>
                             <td rowspan="12">Capaian Pembelajaran (CP) </td>
-                            <td colspan="7">CP Program Studi </td> 
+                            <td colspan="3">CP Program Studi </td> 
                         </tr>
                         <tr>
                             <td>CP-1 </td> 
@@ -92,83 +93,37 @@
                             <td colspan="6">Menerapkan konsep </td> 
                         </tr>
                         <tr>  
-                            <td colspan="7">CP Mata Kuliah </td> 
+                            <td colspan="3">CP Mata Kuliah </td> 
                         </tr>
-            
+
                         <% item.course_los.forEach((res) => { %>
                         <tr>
                             <td><%= res.code %> </td> 
                             <td colspan="6"><%= res.name  %> </td> 
                         </tr>
                         <% }) %>
-            
-                        <tr>
-                            <td>1 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>2 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>3 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>4 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <tr>
-                            <td>5 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                         <tr>
-                            <td>6 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr>
-                        <!--<tr>
-                            <td>7 </td> 
-                            <td colspan="6">Mahasiswa mampu </td> 
-                        </tr> -->
-            
-                        <tr>
-                            <td >Deskripsi Singkat Mata Kuliah </td>
-                            <td colspan="6">Mata kuliah pemrograman web merupakan mata kuliah yang membahas tentang teknik pengembangan website </td> 
-                        </tr>
-            
-                        <tr>
-                            <td rowspan="1" >Materi Pembelajaran/Pokok Bahasan </td>
-                            <td colspan="7">Secara garis besar terdapat 2 materi yang akan </td> 
-                        </tr>
-            
-                        <tr>
-                            <td rowspan="7">Pustaka </td>
-                            <td colspan="7">Matt Doyle, 2009 </td> 
-                        </tr>
-                        <tr>
-                            <td>1 </td> 
-                            <td colspan="6">Matt Doyle, 2009 </td> 
-                        </tr>
-                        <tr>
-                            <td>2 </td> 
-                            <td colspan="6">Nicholas Zakas, 2012</td> 
-                        </tr>
-                        <tr>  
-                            <td colspan="7">Pendukung: </td> 
-                        </tr>
-                        <tr>
-                            <td>3 </td> 
-                            <td colspan="6">Mark Pilgrim, 2010 </td> 
-                        </tr>
-                        <tr>
-                            <td>4 </td> 
-                            <td colspan="6">Steve Fulton, Jeff Fulton, 2011 </td> 
-                        </tr>
-                        <tr>
-                            <td>5 </td> 
-                            <td colspan="6">S. Stefanor , 2010 </td> 
-                        </tr>
-            
+
+                       <% items.forEach((item) => { %>
+                            <tr>
+                              <td colspan="2" class="font-weight">Deskripsi Singkat Mata Kuliah</td>
+                              <td colspan="7"><%= item.description %></td>
+                            </tr>
+                  
+                            <tr>
+                              <td colspan="2" class="font-weight">Materi Pembelajaran/Pokok Bahasan</td>
+                              <td colspan="7"><%= item.material %></td>
+                            </tr>
+                  
+                            <tr>
+                              <td colspan="10" class="font-weight">Pustaka</td>
+                            </tr>
+                            <% }) %> <% items.forEach((data) => { data.course_plan_references.forEach((res) => { var no = 0 %>
+                            <tr>
+                              <td colspan="2" class="border-bottom-0"></td>
+                              <td colspan="6"><%= res.author %>, <%= res.year %>, "<%= res.title %>", <%= res.publisher %></td>
+                            </tr>
+                            <% })}) %>
+
                         <tr>
                             <td rowspan="8">Media Pembelajaran </td>
                             <td colspan="3">Perangkat Lunak: </td> 
@@ -202,17 +157,17 @@
                             <td colspan="3">Version Control (GIT) </td> 
                             <td colspan="4"> </td> 
                         </tr>
-            
+
                         <tr>
                             <td>Team Teaching </td>
                             <td colspan="7">- </td> 
                         </tr>
-            
+
                         <tr>
                             <td>Assessment </td>
                             <td colspan="7">Project, Tugas, Quiz, UTS, UAS </td> 
                         </tr>
-            
+
                         <tr>
                             <td rowspan="3">Mata Kuliah Syarat </td>
                             <td>1 </td>
@@ -229,13 +184,14 @@
                     </tbody>
                 </table>
             </div>
-            <% }) %>
-            </div>
-
-        
-      </div>
+             <% }) %>
+          </div>
+        </div>
     </div>
-    
-    
+
+      <script>
+        window.print();
+      </script>
+
 </body>
 </html>
