--- a/views/dosen/course_plan.ejs
+++ b/views/dosen/course_plan.ejs
@@ -96,7 +96,6 @@
                       </td>
                       <td colspan="2"></td>
                       <td colspan="2"></td>
-                      <td colspan="2"></td>
                     </tr>
           
                     <tr>
@@ -194,9 +193,18 @@
                     </tr>
           
                     <tr>
-                      <td rowspan="3" class="font-weight">Mata Kuliah Syarat</td>
-                      <td></td>
-                    </tr>
+                      <td rowspan="3" class="font-weight">Mata Kuliah Syarat </td>
+                      <td>1 </td>
+                      <td colspan="6">SDA </td> 
+                  </tr>
+                  <tr>
+                      <td>2 </td>
+                      <td colspan="6">DASPRO </td> 
+                  </tr>
+                  <tr>
+                      <td>3 </td>
+                      <td colspan="6">PBO </td> 
+                  </tr>  
                   </tbody>
                 </table>
                 <table class="rps-tabel mt-3">
