--- a/views/admin/lihatRps.ejs
+++ b/views/admin/lihatRps.ejs
@@ -26,16 +26,16 @@
                       <thead>
                         <tr>
                           <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" width="100px"/></th>
-                          <th colspan="9">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
+                          <th colspan="9" class="text-center">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
                         </tr>
                         <tr>
-                          <th colspan="9">PROGRAM STUDI: Sistem Informasi</th>
+                          <th colspan="9" class="text-center">PROGRAM STUDI: Sistem Informasi</th>
                         </tr>
                         <tr>
-                          <th colspan="9">FAKULTAS/PPs: Teknologi Informasi</th>
+                          <th colspan="9" class="text-center">FAKULTAS/PPs: Teknologi Informasi</th>
                         </tr>
                         <tr>
-                          <th colspan="9">UNIVERSITAS ANDALAS</th>
+                          <th colspan="9" class="text-center">UNIVERSITAS ANDALAS</th>
                         </tr>
                       </thead>
                       <tbody>
