--- a/views/dosen/cetakRps.ejs
+++ b/views/dosen/cetakRps.ejs
@@ -4,11 +4,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/public/css/table.css">
     <link rel="stylesheet" href="/css/style-mahasiswa.css">
-    <link href="/vendor/sweetalert2.all.min.css"></link>
-    <script src="/vendor/sweetalert2.all.min.js"></script>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Home</title>
@@ -23,19 +20,19 @@
                 <div class="tampil-rps">
                     <table class="rps-tabel" >
                       <thead>
-                        <tr>
-                          <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" width="100px"/></th>
-                          <th colspan="9">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
-                        </tr>
-                        <tr>
-                          <th colspan="9">PROGRAM STUDI: Sistem Informasi</th>
-                        </tr>
-                        <tr>
-                          <th colspan="9">FAKULTAS/PPs: Teknologi Informasi</th>
-                        </tr>
-                        <tr>
-                          <th colspan="9">UNIVERSITAS ANDALAS</th>
-                        </tr>
+                       <tr>
+                    <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" width="100px"/></th>
+                    <th colspan="9" class="text-center">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
+                  </tr>
+                  <tr>
+                    <th colspan="9" class="text-center">PROGRAM STUDI: Sistem Informasi</th>
+                  </tr>
+                  <tr>
+                    <th colspan="9" class="text-center">FAKULTAS/PPs: Teknologi Informasi</th>
+                  </tr>
+                  <tr>
+                    <th colspan="9" class="text-center">UNIVERSITAS ANDALAS</th>
+                  </tr>
                       </thead>
                       <tbody>
                         <tr>
