--- a/views/mahasiswa/course_plan.ejs
+++ b/views/mahasiswa/course_plan.ejs
@@ -17,17 +17,17 @@
       <table class="rps-tabel">
         <thead>
           <tr>
-            <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" /></th>
-            <th colspan="7">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
+            <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand"/></th>
+            <th colspan="9" class="text-center">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
           </tr>
           <tr>
-            <th colspan="7">PROGRAM STUDI: Sistem Informasi</th>
+            <th colspan="9" class="text-center">PROGRAM STUDI: Sistem Informasi</th>
           </tr>
           <tr>
-            <th colspan="7">FAKULTAS/PPs: Teknologi Informasi</th>
+            <th colspan="9" class="text-center">FAKULTAS/PPs: Teknologi Informasi</th>
           </tr>
           <tr>
-            <th colspan="7">UNIVERSITAS ANDALAS</th>
+            <th colspan="9" class="text-center">UNIVERSITAS ANDALAS</th>
           </tr>
         </thead>
         <tbody>
